--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,6 +33,12 @@ jobs:
           NEXT_PUBLIC_AZURE_TENANT_ID: ${{ secrets.NEXT_PUBLIC_AZURE_TENANT_ID }}
           NEXT_PUBLIC_REDIRECT_URI: ${{ secrets.NEXT_PUBLIC_REDIRECT_URI }}
 
+      - name: Use working simple login page as default
+        run: |
+          cp public/index-simple.html out/index-simple.html
+          # Update redirect URI in the simple page to not include /index-simple.html
+          sed -i 's|/mit-qb-frontend/index-simple.html|/mit-qb-frontend/|g' out/index-simple.html
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
